fix: fix uwsgi config

--- a/base/uwsgi.ini
+++ b/base/uwsgi.ini
@@ -6,8 +6,10 @@ lazy-apps = true ; load app in each worker instead of the master
 vacuum = true ; vacuum sockets
 procname-prefix = basic_api_server_
 single-interpreter = true ; signle interpreter to avoid threadstate
-chdir = %d./basic-api/
-module=base.wsgi
+
+chdir = ..
+module = base.wsgi
+home = /home/ubuntu/basic-api/.venv
 
 # http-socket
 http-socket = :8000 ; http over unix socket                                        
