feat: update nginx and uwsgi configs

--- a/base/uwsgi.ini
+++ b/base/uwsgi.ini
@@ -1,22 +1,38 @@
 [uwsgi]
+# General Settings
+master = true
+strict = true
+need-app = true
+
+# Project Settings
 chdir = /home/ubuntu/basic-api/
 module = base.wsgi
 home = /home/ubuntu/basic-api/.venv
 
-# Enable the master process to manage workers
-master = true
-
-# Use a simple socket for HTTP requests (Nginx can reverse proxy to this socket)
-http-socket = :8000
-
-# Set the number of worker processes (you can adjust based on your server's capacity)
+# Process Management
 processes = 1
+threads = 2
 
-# Enable threading (if needed)
-enable-threads = true
+# Logging
+daemonize = /home/ubuntu/basic-api/uwsgi.log
+log-maxsize = 10485760  # Rotate log when it reaches 10MB
 
-# Ensure uWSGI cleans up after itself
+# Socket Configuration
+http-socket = 127.0.0.1:8000
 vacuum = true
 
-# Allow uWSGI to gracefully shutdown on SIGTERM
+# Memory Management
+limit-as = 512
+reload-on-rss = 128  # Restart worker if it exceeds 128MB RSS memory
+
+# Additional Settings
+enable-threads = true
+thunder-lock = true
+buffer-size = 65535
+
+# Graceful Shutdown
+worker-reload-mercy = 60
 die-on-term = true
+
+# Touch file to trigger graceful reload
+touch-chain-reload = /tmp/uwsgi.reload
