fix: fix uwsgi logs path

--- a/base/uwsgi.ini
+++ b/base/uwsgi.ini
@@ -1,38 +1,32 @@
 [uwsgi]
-# General Settings
+# variables
+projectname = base
+
+# config
 master = true
-strict = true
-need-app = true
-
-# Project Settings
-chdir = /home/ubuntu/basic-api/
-module = base.wsgi
-home = /home/ubuntu/basic-api/.venv
-
-# Process Management
-processes = 1
-threads = 2
-
-# Logging
-daemonize = /home/ubuntu/basic-api/log/uwsgi.log
-log-maxsize = 10485760  # Rotate log when it reaches 10MB
-
-# Socket Configuration
-http-socket = 127.0.0.1:8000
-vacuum = true
-
-# Memory Management
-limit-as = 512
-reload-on-rss = 128  # Restart worker if it exceeds 128MB RSS memory
-
-# Additional Settings
+need-app = true ; stop if app not loaded
+protocol = uwsgi
+module = django.core.wsgi:get_wsgi_application()
+env = DJANGO_SETTINGS_MODULE=%(projectname).settings
 enable-threads = true
 thunder-lock = true
-buffer-size = 65535
+chmod-socket = 666
+vacuum=True
 
-# Graceful Shutdown
-worker-reload-mercy = 60
-die-on-term = true
+# http-socket
+http-socket = :8000 ; http over unix socket                                        
+listen = 128 ; socket queue
+socket-timeout = 360
+# worker
+enable-threads = true ; enable thereading for modules like celery
+; threads = 2 ; threads
+processes = 2 ; process 2*cpu_cores                                                
+max-requests = 4000 ; max requests
+reload-on-rss = 1333 ; reload if rss memory is higher than specified megabytes
+max-worker-lifetime = 360 ; reload worker after the specified amount of seconds
+worker-reload-mercy = 5 ; set the maximum time a worker can take to reload/shutdown
 
-# Touch file to trigger graceful reload
-touch-chain-reload = /tmp/uwsgi.reload
+
+die-on-term = true ; SIGTERM
+thunder-lock = true ; zeeg probelm
+daemonize = /home/ubuntu/basic-api/log/uwsgi.log
